Trainers with pokemons and movements